# android-properties

./: .travis.yml  Cargo.toml  README.md  check.sh
examples/: property_foreach.rs  property_get.rs  property_refresh.rs  property_set.rs
src/: lib.rs
src/android/: mod.rs
src/mock/: mod.rs
